# 20240625-sessions-call-local-code

./: README.md  azure_container_apps.py  local_code.py  pyproject.toml  remote_code.py  session_libs.py
